# This file specifies a Bazel workspace (see https://bazel.build/).
#
# For now, LCM's Bazel build only supports C, C++, Java, and Python.
# We invite users to submit pull requests for other languages if needed.

module(
    name = "lcm",
    bazel_compatibility = [">=8.0.1"],
)

# Load bazel rules.

bazel_dep(name = "apple_support", version = "1.17.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_python", version = "0.40.0")

# Load runtime dependencies.

bazel_dep(name = "pcre2", version = "10.45")
bazel_dep(name = "glib", version = "2.82.2.bcr.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "lcm_maven",
    artifacts = [
        "junit:junit:4.11",
        "net.sf.jchart2d:jchart2d:3.3.2",
    ],
)
use_repo(maven, "lcm_maven")

# Load dev dependencies.

bazel_dep(name = "googletest", version = "1.15.2", dev_dependency = True)
