option('lcm_enable_examples', type : 'feature', value : 'enabled', description : 'Build test and example programs')
option('lcm_enable_python', type : 'feature', value : 'auto', description : 'Build Python bindings and utilities')
option('lcm_enable_java', type : 'feature', value : 'auto', description : 'Build Java bindings and utilities')
option('lcm_enable_lua', type : 'feature', value : 'auto', description : 'Build Lua bindings and utilities')
option('lcm_enable_tests', type : 'feature', value : 'disabled', description : 'Build unit tests')
option('lcm_install_m4macros', type : 'feature', value : 'enabled', description : 'Install autotools support M4 macros')
option('lcm_install_pkgconfig', type : 'feature', value : 'enabled', description : 'Install pkg-config files')
option('lcm_enable_lcmgen', type : 'feature', value: 'enabled', description : 'Build lcmgen core module')
option('LCM_C_NAMESPACE', type : 'string', value : 'lcm', description : 'The namespace of C symbols')
