[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "lcm"
version = "1.5.1"
description = "Lightweight Communication and Marshalling"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  'Development Status :: 4 - Beta',
  'Topic :: Communications',
  'Framework :: Robot Framework',
]

[project.scripts]
lcm-example = "lcm:run_example"
lcm-gen = "lcm:run_gen"
lcm-logfilter = "lcm:run_logfilter"
lcm-logger = "lcm:run_logger"
lcm-logplayer = "lcm:run_logplayer"
lcm-logplayer-gui = "lcm:run_logplayer_gui"
lcm-sink = "lcm:run_sink"
lcm-source = "lcm:run_source"
lcm-spy = "lcm:run_spy"
lcm-tester = "lcm:run_tester"

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
ninja.make-fallback = false

[tool.scikit-build.cmake.define]
LCM_INSTALL_PKGCONFIG = "OFF"
LCM_PIP_BUILD = "ON"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = ["error"]
python_files = "test/python/test_python_module.py"

[tool.cibuildwheel]
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "yum install java-1.8.0-openjdk-devel -y"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = ""

# Experimental armv7l manylinux image is Ubuntu-based
[[tool.cibuildwheel.overrides]]
select = "*-manylinux_armv7l*"
before-all = "apt update && apt install libglib2.0-dev openjdk-8-jdk -y"
